[package]
name = "ustc_cas"
version = "0.1.2"
edition = "2021"
rust-version = "1.61"

description = "a simple library for logging into USTC CAS System"
repository = "https://github.com/littzhch/ustc_cas/"
readme = "README.md"
license-file = "LICENSE.txt"

[lib]
crate-type = ["lib"]

[dependencies]
bytes = {version = "1.3", optional = true}
image = { version = "0.24", default-features = false, features = ["jpeg"], optional = true}
once_cell = "1.17"
regex = { version = "1.7", default-features = false, features = ["unicode", "std"] }
reqwest = { version = "0.11", default-features = false, features = ["cookies"] }

[dev-dependencies]
tokio = { version = "1.24", features = ["full"] }

[features]
default = ["native-tls", "validate-code"]
validate-code = ["image", "bytes"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

